[soar][issues-comon][V01]: se corrigen las issues de los paquetes common.
[calegria]
Se corrigen las issues relacionadas al paquete common, cuando este código común este mas estable se empaquetará en un lib.